--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">Kids Brain</string>
-    <string name="title_activity_home">MainActivity</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="title_activity_main2">MainActivity</string>
+    <string name="title_compte">Compte</string>
+    <string name="title_game">Jeux</string>
+    <string name="title_video">Video</string>
+    <string name="se_connecter">Se connecter</string>
+    <string name="deconnect">Se déconnecter</string>
 </resources>
