--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="title_video">Video</string>
     <string name="se_connecter">Se connecter</string>
     <string name="deconnect">Se déconnecter</string>
+    <string name="action_settings">Settings</string>
+    <string name="size_of_board">3</string>
+    <string name="X">" X "</string>
+    <string name="O">" O "</string>
+    <string name="none">" "</string>
 </resources>
